oauthLoginForm - css 흰색 배경으로 변경

--- a/src/main/resources/templates/oauthLoginForm.html
+++ b/src/main/resources/templates/oauthLoginForm.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <style>
-        .gradient-custom {
-            background: #6a11cb;
-            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-        }
-    </style>
+<!--    <style>-->
+<!--        .gradient-custom {-->
+<!--            background: #fffff0;-->
+<!--            background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));-->
+<!--            background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body class="gradient-custom">
 <section class="d-flex vh-100">
