--- a/src/main/resources/templates/oauthLoginForm.html
+++ b/src/main/resources/templates/oauthLoginForm.html
@@ -24,8 +24,13 @@
                         <h2 class="text-white">LOGIN</h2>
                         <p class="text-white-50 mt-2 mb-5">로그인이 필요합니다.</p>
                         <div class = "mb-2">
-                            <a href="/oauth2/authorization/google">
+                            <a href="/oauth2/authorization/google" style="width : 191px; height : 46px; object-fit : contain;">
                                 <img src="/img/google.png">
+                            </a>
+                        </div>
+                        <div class="mb-2">
+                            <a href="/oauth2/authorization/naver">
+                                <img src="/img/naver.png" style="width : 191px; height : 46px; object-fit : contain;">
                             </a>
                         </div>
                     </div>
