commentList.html - 답글용 모달창에 표시 되는 modal-title의 텍스트를 답글 작성 -> 답글 로 변경

--- a/src/main/resources/templates/comments/commentList.html
+++ b/src/main/resources/templates/comments/commentList.html
@@ -55,7 +55,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="replyModalLabel">답글 작성</h5>
+                <h5 class="modal-title" id="replyModalLabel">답글</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -78,7 +78,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="updateModalLabel">수정 댓글 작성</h5>
+                <h5 class="modal-title" id="updateModalLabel">수정</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
