--- a/src/main/resources/templates/articles/article.html
+++ b/src/main/resources/templates/articles/article.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>article</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        #article-title, #article-content {
+            white-space : pre-wrap;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -12,11 +17,11 @@
         <table class="table">
             <tbody>
             <tr>
-                <td th:text="${article.title}">제목</td>
+                <td id="article-title" th:text="${article.title}">제목</td>
                 <td th:text="${article.authorName}">작성자</td>
             </tr>
             <tr>
-                <td th:text="${article.content}">내용</td>
+                <td id="article-content" th:text="${article.content}">내용</td>
             </tr>
             </tbody>
         </table>
