commentList.html - 댓글 내용 표시 부분 코드 정리

--- a/src/main/resources/templates/comments/commentList.html
+++ b/src/main/resources/templates/comments/commentList.html
@@ -22,7 +22,7 @@
                 <td th:text="${comment.createdAt}">작성일</td>
             </tr>
             <tr>
-                <td id="comment-content                                                                                                                                                                                                                                      " colspan="3" th:text="${comment.content}">내용</td>
+                <td id="comment-content" th:text="${comment.content}">내용</td>
             </tr>
             <tr>
                 <td>
